unpackaged/objects/Address_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address Mappings</relationshipLabel>
        <relationshipName>Address_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <formula>Address__r.Address_Line_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <formula>Address__r.Address_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <formula>Address__r.Address_Line_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Lines__c</fullName>
        <formula>Address__r.Address_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Lines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Registered Address</fullName>
                </value>
                <value>
                    <fullName>Visiting Address</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
                <value>
                    <fullName>Local Language Address</fullName>
                </value>
                <value>
                    <fullName>Other Address</fullName>
                </value>
                <value>
                    <fullName>Other Correspondance Address</fullName>
                </value>
                <value>
                    <fullName>Reporting Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Address Mappings</relationshipLabel>
        <relationshipName>Address_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Address__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Address Mappings</relationshipLabel>
        <relationshipName>Address_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Address__r.Country_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT( Address__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Link__c</fullName>
        <formula>Address__r.Map_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <formula>Address__r.Postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Removed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Removed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Address_Mappings_Removed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_Date__c</fullName>
        <label>Removed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_County__c</fullName>
        <formula>Address__r.State_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Address__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Address Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Active__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Primary__c</columns>
        <columns>Status__c</columns>
        <columns>Address_Lines__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Address Mapping Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lookup_Should_Be_Populated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISBLANK( Contact__c ),
 ISBLANK( Account__c )
)</errorConditionFormula>
        <errorMessage>Either Contact or Account should be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_One_Lookup_Should_Be_Populated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT( ISBLANK( Contact__c ) ),
 NOT( ISBLANK( Account__c ) )
)</errorConditionFormula>
        <errorMessage>Either Contact or Account should be populated, not both.</errorMessage>
    </validationRules>
</CustomObject>